<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundlogin"
    android:padding="20dp"
    tools:context="com.truongtd.orderfood.activity.LoginActivity">

    <ImageView
        android:id="@+id/imv_login"
        android:src="@drawable/logodangnhap"
        android:layout_width="@dimen/size_width_image"
        android:layout_height="@dimen/size_height_image"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:id="@+id/details_login"
        android:orientation="vertical"
        android:layout_marginTop="210dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_user_name_login"
            android:drawablePadding="@dimen/size_margin_top_components"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_height_layout"
            android:background="@drawable/background_components"
            android:drawableLeft="@drawable/ic_person"
            android:hint="@string/user_name_hint"
            android:paddingLeft="@dimen/size_margin_top_components" />

        <EditText
            android:id="@+id/edt_password_login"
            android:drawablePadding="@dimen/size_margin_top_components"
            android:layout_marginTop="@dimen/size_margin_top_components"
            android:hint="@string/pass_word_hint"
            android:paddingLeft="@dimen/size_margin_top_components"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_height_layout"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_pass_word"
            android:background= "@drawable/background_components"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_button_white"
            android:layout_marginTop="@dimen/size_margin_top_components"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_18"
            android:background="@drawable/background_button_login"/>
        <Button
            android:id="@+id/btn_register"
            android:text="@string/text_register"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_button_white"
            android:layout_marginTop="@dimen/size_margin_top_components"
            android:background="@drawable/background_button_register"/>
    </LinearLayout>

</RelativeLayout>
