<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="30dp"
    tools:context="com.truongtd.orderfood.activity.RegisterActivity">

    <TextView
        android:id="@+id/tv_title_register"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="119dp"
        android:layout_marginStart="119dp" />
    <EditText
        android:id="@+id/edt_user_name"
        android:hint="@string/user_name_hint"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:layout_below="@id/tv_title_register"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_components"/>
    <EditText
        android:id="@+id/edt_pass_word"
        android:hint="@string/pass_word_hint"
        android:drawableLeft="@drawable/ic_pass_word"
        android:drawablePadding="10dp"
        android:layout_below="@id/edt_user_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/background_components"/>
    <RadioGroup
        android:id="@+id/rb_gender"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_pass_word"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/size_margin_top_components"
        android:background="@drawable/background_components">
        <RadioButton
            android:id="@+id/rb_male"
            android:text="Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:text="FeMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
    <EditText
        android:id="@+id/edt_birth_day"
        android:hint="@string/birth_day_hint"
        android:drawableLeft="@drawable/ic_date"
        android:drawablePadding="10dp"
        android:layout_below="@id/rb_gender"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_components"/>
    <EditText
        android:id="@+id/edt_pass_port"
        android:hint="@string/pass_port_hint"
        android:drawableLeft="@drawable/ic_date"
        android:drawablePadding="10dp"
        android:layout_below="@id/edt_birth_day"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="10"
        android:inputType="number"
        android:background="@drawable/background_components"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_pass_port"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp">
        <Button
            android:textAllCaps="false"
            android:text="Accept"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/edt_pass_port"/>
        <Button
            android:textAllCaps="false"
            android:text="Exit"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/btn_accept"
            android:layout_below="@id/edt_pass_port"/>
    </LinearLayout>

</RelativeLayout>
